build/log/idf_py_stdout_output_10359
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/bensmith/Documents/ENGR213_214/morning-person-esp32/build/bootloader/esp-idf/esptool_py && /Users/bensmith/.espressif/python_env/idf5.4_py3.9_env/bin/python /Users/bensmith/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/bensmith/Documents/ENGR213_214/morning-person-esp32/build/bootloader/bootloader.bin
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/espressif__json_parser/CMakeFiles/__idf_espressif__json_parser.dir/src/json_parser.c.obj
FAILED: esp-idf/espressif__json_parser/CMakeFiles/__idf_espressif__json_parser.dir/src/json_parser.c.obj 
/Users/bensmith/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/bensmith/Documents/ENGR213_214/morning-person-esp32/build/config -I/Users/bensmith/Documents/ENGR213_214/morning-person-esp32/managed_components/espressif__json_parser/include -I/Users/bensmith/esp/esp-idf/components/newlib/platform_include -I/Users/bensmith/esp/esp-idf/components/freertos/config/include -I/Users/bensmith/esp/esp-idf/components/freertos/config/include/freertos -I/Users/bensmith/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/bensmith/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/bensmith/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/bensmith/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/bensmith/esp/esp-idf/components/freertos/esp_additions/include -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/include -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/bensmith/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/bensmith/esp/esp-idf/components/heap/include -I/Users/bensmith/esp/esp-idf/components/heap/tlsf -I/Users/bensmith/esp/esp-idf/components/log/include -I/Users/bensmith/esp/esp-idf/components/soc/include -I/Users/bensmith/esp/esp-idf/components/soc/esp32 -I/Users/bensmith/esp/esp-idf/components/soc/esp32/include -I/Users/bensmith/esp/esp-idf/components/soc/esp32/register -I/Users/bensmith/esp/esp-idf/components/hal/platform_port/include -I/Users/bensmith/esp/esp-idf/components/hal/esp32/include -I/Users/bensmith/esp/esp-idf/components/hal/include -I/Users/bensmith/esp/esp-idf/components/esp_rom/include -I/Users/bensmith/esp/esp-idf/components/esp_rom/esp32/include -I/Users/bensmith/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/bensmith/esp/esp-idf/components/esp_rom/esp32 -I/Users/bensmith/esp/esp-idf/components/esp_common/include -I/Users/bensmith/esp/esp-idf/components/esp_system/include -I/Users/bensmith/esp/esp-idf/components/esp_system/port/soc -I/Users/bensmith/esp/esp-idf/components/esp_system/port/include/private -I/Users/bensmith/esp/esp-idf/components/xtensa/esp32/include -I/Users/bensmith/esp/esp-idf/components/xtensa/include -I/Users/bensmith/esp/esp-idf/components/xtensa/deprecated_include -I/Users/bensmith/esp/esp-idf/components/lwip/include -I/Users/bensmith/esp/esp-idf/components/lwip/include/apps -I/Users/bensmith/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/bensmith/esp/esp-idf/components/lwip/lwip/src/include -I/Users/bensmith/esp/esp-idf/components/lwip/port/include -I/Users/bensmith/esp/esp-idf/components/lwip/port/freertos/include -I/Users/bensmith/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/bensmith/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/bensmith/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/bensmith/Documents/ENGR213_214/morning-person-esp32/managed_components/espressif__jsmn/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/bensmith/Documents/ENGR213_214/morning-person-esp32=. -fmacro-prefix-map=/Users/bensmith/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/espressif__json_parser/CMakeFiles/__idf_espressif__json_parser.dir/src/json_parser.c.obj -MF esp-idf/espressif__json_parser/CMakeFiles/__idf_espressif__json_parser.dir/src/json_parser.c.obj.d -o esp-idf/espressif__json_parser/CMakeFiles/__idf_espressif__json_parser.dir/src/json_parser.c.obj -c /Users/bensmith/Documents/ENGR213_214/morning-person-esp32/managed_components/espressif__json_parser/src/json_parser.c
/Users/bensmith/Documents/ENGR213_214/morning-person-esp32/managed_components/espressif__json_parser/src/json_parser.c: In function 'json_arr_get_object':
/Users/bensmith/Documents/ENGR213_214/morning-person-esp32/managed_components/espressif__json_parser/src/json_parser.c:338:5: error: implicit declaration of function 'ESP_LOGW' [-Wimplicit-function-declaration]
  338 |     ESP_LOGW("JSON", "tok is %d", tok);
      |     ^~~~~~~~
ninja: build stopped: subcommand failed.
